Deprecation fix.